# HaskellTagging

./: LICENSE  README.markdown  tagging.cabal
Data/: Tag.hs
